--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "lucide-react": "^0.462.0",
     "plasmo": "0.89.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -26,6 +27,7 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
-    ]
+    ],
+    "permissions": ["activeTab", "storage"]
   }
 }
